--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@expo/vector-icons": "^14.0.0",
     "expo-image-manipulator": "^13.0.0",
     "react-native-gesture-handler": "^2.20.0",
-    "recoil": "^0.7.7"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
